<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/activity_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.xyxg.android.unittestexample.LoginActivity">


    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_login_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:hint="名称"
            android:layout_centerHorizontal="true">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_login_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/til_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_login_name"
            android:layout_centerHorizontal="true"
            android:hint="密码"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="29dp">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/et_login_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingLeft="20dp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:text="登录"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/til_login_pwd"/>
</RelativeLayout>
